# mags-hypermodern-python

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml  release.yml  test-pypi.yml
docs/: conf.py  index.rst  reference.rst
src/mags_hypermodern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
