[tool.poetry]
name = "mags-hypermodern-python"
version = "0.1.0"
description = ""
authors = ["James Grider <james.grider@faa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
