[tool.poetry]
name = "mags-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/magavendon/mags-hypermodern-python"
repository = "https://github.com/magavendon/mags-hypermodern-python"
keywords = ["hypermodern"]
authors = ["James Grider <james.grider@faa.gov>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
