[tool.poetry]
name = "mags-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/magavendon/mags-hypermodern-python"
repository = "https://github.com/magavendon/mags-hypermodern-python"
keywords = ["hypermodern"]
authors = ["James Grider <james.grider@faa.gov>"]

[tool.poetry.scripts]
mags-hypermodern-python = "mags_hypermodern_python.console:main"
mhp = "mags_hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
